modifique la extensiones de las imagenes

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ iframe {
   height: auto;
   padding-top: 80px;
   width: 100%;
-  background-image: url(../images/background.jpg);
+  background-image: url(../images/background.webp);
 }
 
 .textoNosotros {
@@ -174,7 +174,7 @@ iframe {
 /*Fin seccion blog*/
 /*seccion contacto*/
 .contactanos {
-  background-image: url(../images/3.jpg);
+  background-image: url(../images/3.webp);
   height: 900px;
 }
 
