--- a/scss/componentes/_bodys.scss
+++ b/scss/componentes/_bodys.scss
@@ -53,7 +53,7 @@ h1 {
     height: auto;
     padding-top: 80px;
     width: 100%;
-    background-image: url(../images/background.jpg);
+    background-image: url(../images/background.webp);
  }   
        
  .textoNosotros {color: nth($listaColores, 4 );
