--- a/scss/componentes/_seccion contacto.scss
+++ b/scss/componentes/_seccion contacto.scss
@@ -3,7 +3,7 @@
 
 /*seccion contacto*/  
 .contactanos {
-background-image: url(../images/3.jpg);
+background-image: url(../images/3.webp);
 height: 900px;
 }
           
