cambie el h1,modifique el carrousel,agregue mediasQ para el carrousel,modifique la seccion contacto

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,15 @@ body {
   flex-direction: column;
 }
 
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.carousel-inner {
+  height: 830px;
+}
+
 img {
   width: 100%;
 }
@@ -104,6 +113,21 @@ iframe {
   transition: all 3s;
 }
 
+@media only screen and (max-width: 320px) {
+  .carousel-inner {
+    height: auto;
+  }
+}
+@media only screen and (min-width: 321px) and (max-width: 768px) {
+  .carousel-inner {
+    height: auto;
+  }
+}
+@media only screen and (min-width: 769px) and (max-width: 1780px) {
+  .carousel-inner {
+    height: auto;
+  }
+}
 /*Seccion blog*/
 .containerFotos {
   display: grid;
