puli los detalles del formulario le di padding y width

--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,10 @@ iframe {
 .formulario {
   background-color: white;
   opacity: 80%;
+  padding: 20px;
+}
+.formulario textarea {
+  width: 100%;
 }
 
 .tituloContacto {
