--- a/scss/componentes/_seccion contacto.scss
+++ b/scss/componentes/_seccion contacto.scss
@@ -17,7 +17,12 @@ padding: 30px;
 
 .formulario {
       background-color:nth( $listaColores,3);
-      opacity: 80%;
+      opacity: 80%; 
+      padding:20px ;
+
+      textarea {
+            width: 100%;
+       }
 }
 .tituloContacto {
 display: $display;
