hice responsive la seccion de preguntas frecuentes

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,10 @@ iframe {
 }
 
 @media only screen and (max-width: 320px) {
+  .contPreguntas {
+    width: auto;
+  }
+
   body {
     background-color: black;
   }
@@ -220,6 +224,10 @@ iframe {
   }
 }
 @media only screen and (min-width: 321px) and (max-width: 768px) {
+  .contPreguntas {
+    width: auto;
+  }
+
   body {
     background-color: black;
   }
