--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ iframe {
 
 .pregunta:hover .respuesta {
   max-height: 500px;
-  transition: all 1s;
+  transition: all 2s;
 }
 
 .respuesta {
@@ -198,25 +198,7 @@ iframe {
   }
 
   .containerFotos {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-    width: 100%;
-  }
-
-  .containerFotos .foto1 {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
-
-  .containerFotos .foto2 {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-
-  .containerFotos .foto3 {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    display: none;
   }
 
   .textoNosotros {
@@ -233,9 +215,7 @@ iframe {
   }
 
   .containerFotos {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto;
+    display: none;
   }
 }
 @media only screen and (min-width: 769px) {
