--- a/scss/componentes/_seccion blog.scss
+++ b/scss/componentes/_seccion blog.scss
@@ -31,7 +31,7 @@
   }
   .pregunta:hover .respuesta {
     max-height: 500px;
-    transition: all 1s;}
+    transition: all 2s;}
  .respuesta {
     background-color: #303030;
     margin-bottom: 5px;
@@ -57,23 +57,8 @@
       }
       body {background-color: nth( $listaColores,4 )};
       .containerFotos {
-          display: grid;
-          grid-template-columns: auto;
-          grid-template-rows: auto auto auto;
-          width: $ancho + 20%;
-      }
-      .containerFotos .foto1 {
-          grid-column: 1/2;
-          grid-row: 1/2;
-      }
-      .containerFotos .foto2 {
-          grid-column: 1/2;
-          grid-row: 2/3;
-      }
-      .containerFotos .foto3 {
-          grid-column: 1/2;
-          grid-row: 3/4;
-      }
+          display: none;}
+   
       .textoNosotros {
        padding: 30px;}
    
@@ -85,9 +70,7 @@
       }
       body {background-color:nth( $listaColores,4 );}
       .containerFotos {
-          display: grid;
-          grid-template-columns: auto auto;
-          grid-template-rows: auto;
+          display: none;
       }
       }
       @media only screen and (min-width:769px) {
