--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,10 @@ iframe {
 }
 
 @media only screen and (max-width: 320px) {
+  .preguntasF {
+    padding: 20px;
+  }
+
   .contPreguntas {
     width: auto;
   }
@@ -206,6 +210,10 @@ iframe {
   }
 }
 @media only screen and (min-width: 321px) and (max-width: 768px) {
+  .preguntasF {
+    padding: 20px;
+  }
+
   .contPreguntas {
     width: auto;
   }
