--- a/scss/componentes/_seccion blog.scss
+++ b/scss/componentes/_seccion blog.scss
@@ -52,6 +52,9 @@
     justify-content: space-around;}
 
     @media only screen and (max-width:320px) {
+      .preguntasF {
+        padding: 20px;
+      }
       .contPreguntas {
           width: auto;
       }
@@ -65,6 +68,10 @@
    }
  
   @media only screen and (min-width:321px) and (max-width:768px){
+    .preguntasF {
+        padding: 20px;
+      }
+
       .contPreguntas{
           width: auto;
       }
