personalice la seccion renders, sume algo de JS para la visualizacion de la misma

--- a/scss/componentes/_bodys.scss
+++ b/scss/componentes/_bodys.scss
@@ -66,10 +66,12 @@ h1 {
                  font-family: 'Staatliches', cursive;
                 padding: 100px;
                 height: 600px;
+
+                &:hover{
+                  @include transform;
+                }
                  }
- .textoNosotros:hover {
- @include transform;
- }
+
 
  @media only screen and (max-width: 320px) {
   .carousel-inner{
