seleccion de imagenes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,4 @@
 @import 'base/displays';
 @import 'base/listaColores';
 @import 'base/mixins';
-@import 'componentes/seccion\ renderExteriores';
+@import 'componentes/seccion\ renders';
