--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,18 @@ iframe {
   .carousel-inner {
     height: auto;
   }
+
+  .Nosotros {
+    background-image: url(../images/17.webp);
+  }
 }
 @media only screen and (min-width: 321px) and (max-width: 768px) {
   .carousel-inner {
     height: auto;
+  }
+
+  .Nosotros {
+    background-image: url(../images/17.webp);
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 1780px) {
